--- a/content/pages/rules/architecture/355/index.adoc
+++ b/content/pages/rules/architecture/355/index.adoc
@@ -33,7 +33,16 @@ but this information is regarded as sensitive according to the intended
 security policies of other stakeholders such as the product's administrator,
 users, or others whose information is being processed.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r3]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A6-Security_Misconfiguration[OWASP Top 10 A6:2017-Security Misconfiguration].
+Security misconfiguration is the most commonly seen issue.
+This is commonly a result of insecure default configurations,
+incomplete or ad hoc configurations, open cloud storage,
+misconfigured *HTTP* headers,
+and verbose error messages containing sensitive information.
+Not only must all operating systems, frameworks, libraries, and applications be
+securely configured, but they must be patched/upgraded in a timely fashion.
+
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.3 File execution Requirements.(12.3.4)]
 Verify that the application protects against reflective file download (*RFD*)
 by validating or ignoring user-submitted filenames in a *JSON*, *JSONP*,
@@ -41,7 +50,7 @@ or *URL* parameter,
 the response **Content-Type** header should be set to **text/plain**,
 and the **Content-Disposition** header should have a fixed filename.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.5 File Download Requirements.(12.5.1)]
 Verify that the web tier is configured to serve only files with specific file
 extensions to prevent unintentional information and source code leakage.
@@ -49,12 +58,12 @@ For example, backup files (e.g. *.bak*), temporary working files (e.g. *.swp*),
 compressed files (*.zip*, *.tar.gz*, etc.) and other extensions commonly used
 by editors should be blocked unless required.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.1)]
 Verify that every *HTTP* response contains a content type header specifying a
 safe character set (e.g., *UTF-8*, **ISO 8859-1**).
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.2)]
 Verify that all *API* responses contain
 **Content-Disposition: attachment; filename="api.json"**
