--- a/content/pages/rules/devices/206/index.adoc
+++ b/content/pages/rules/devices/206/index.adoc
@@ -12,3 +12,14 @@ The system must keep mobile devices' communication protocols hidden,
 protected with credentials or turned off.
 This refers to protocols that allow data exchange such as `Bluetooth`, `NFC`
 and `Tethering`.
+
+== References
+
+. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A6-Security_Misconfiguration[OWASP Top 10 A6:2017-Security Misconfiguration].
+Security misconfiguration is the most commonly seen issue.
+This is commonly a result of insecure default configurations,
+incomplete or ad hoc configurations, open cloud storage,
+misconfigured *HTTP* headers,
+and verbose error messages containing sensitive information.
+Not only must all operating systems, frameworks, libraries, and applications be
+securely configured, but they must be patched/upgraded in a timely fashion.
