--- a/content/pages/rules/files/340/index.adoc
+++ b/content/pages/rules/files/340/index.adoc
@@ -42,7 +42,16 @@ query.
 The attacker’s hostile data can trick the interpreter into executing unintended
 commands or accessing data without proper authorization.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A7-Cross-Site_Scripting_(XSS)[OWASP Top 10 A7:2017-Cross-Site Scripting (XSS)].
+*XSS* flaws occur whenever an application includes untrusted data in a new web
+page without proper validation or escaping,
+or updates an existing web page with user-supplied data using a browser *API*
+that can create *HTML* or **JavaScript**.
+*XSS* allows attackers to execute scripts in the victim’s browser which can
+hijack user sessions, deface web sites, or redirect the user to malicious
+sites.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V1.12 Secure File Upload Architectural Requirements.(1.12.2)]
 Verify that user-uploaded files - if required to be displayed or downloaded
 from the application - are served by either octet stream downloads,
@@ -50,12 +59,12 @@ or from an unrelated domain, such as a cloud file storage bucket.
 Implement a suitable content security policy to reduce the risk from XSS
 vectors or other attacks from the uploaded file.
 
-. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V12.5 File Download Requirements.(12.5.2)]
 Verify that direct requests to uploaded files will never be executed as
 **HTML**/**JavaScript** content.
 
-. [[r6]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r7]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V14.4 HTTP Security Headers Requirements.(14.4.3)]
 Verify that a content security policy (*CSPv2*) is in place that helps mitigate
 impact for *XSS* attacks like *HTML*, *DOM*, *JSON*, and *JavaScript* injection
