--- a/content/pages/rules/source/158/index.adoc
+++ b/content/pages/rules/source/158/index.adoc
@@ -20,19 +20,27 @@ version of the chosen programming language.
 
 == References
 
-. [[r1]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[OWASP-ASVS v3.1-1.9]
+. [[r1]] link:https://owasp.org/www-project-top-ten/OWASP_Top_Ten_2017/Top_10-2017_A9-Using_Components_with_Known_Vulnerabilities[OWASP Top 10 A9:2017-Using Components with Known Vulnerabilities].
+Components, such as libraries, frameworks, and other software modules,
+run with the same privileges as the application.
+If a vulnerable component is exploited,
+such an attack can facilitate serious data loss or server takeover.
+Applications and **API**s using components with known vulnerabilities may
+undermine application defenses and enable various attacks and impacts.
+
+. [[r2]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[OWASP-ASVS v3.1-1.9]
 A mechanism for enforcing updates of the application exists.
 
-. [[r2]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[OWASP-ASVS v3.1-1.11]
+. [[r3]] link:https://www.owasp.org/index.php/ASVS_V1_Architecture[OWASP-ASVS v3.1-1.11]
 All application components, libraries, modules, frameworks, platform,
 and operating systems are free from known vulnerabilities.
 
-. [[r3]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 Appendix C: Internet of Things Verification Requirements.(C.11)]
 Verify that any use of banned *C* functions are replaced with the appropriate
 safe equivalent functions.
 
-. [[r4]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V5.4 Memory, String, and Unmanaged Code Requirements.(5.4.1)]
 Verify that the application uses memory-safe string, safer memory copy and
 pointer arithmetic to detect or prevent stack, buffer, or heap overflows.
